sandbox/output
TicketDispenserTest.java:10: error: constructor TurnTicket in class TurnTicket cannot be applied to given types;
   TurnTicket  turnTicket1=new TurnTicket(); 
                           ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
TicketDispenserTest.java:12: error: cannot find symbol
   number1=turnTicket1.getTurnNumber();
   ^
  symbol:   variable number1
  location: class TicketDispenserTest
TicketDispenserTest.java:13: error: constructor TurnTicket in class TurnTicket cannot be applied to given types;
   TurnTicket  turnTicket2=new TurnTicket(); 
                           ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
TicketDispenserTest.java:14: error: cannot find symbol
   number2=turnTicket1.getTurnNumber();
   ^
  symbol:   variable number2
  location: class TicketDispenserTest
TicketDispenserTest.java:17: error: cannot find symbol
  assertEquals(number1, number2-1);
               ^
  symbol:   variable number1
  location: class TicketDispenserTest
TicketDispenserTest.java:17: error: cannot find symbol
  assertEquals(number1, number2-1);
                        ^
  symbol:   variable number2
  location: class TicketDispenserTest
6 errors
